# resume_text_project

./: LICENSE  README.md  pyproject.toml  setup.py  template.py
